--- a/details/add-test.html
+++ b/details/add-test.html
@@ -327,7 +327,7 @@
         // 取消按钮
         $(".btn-cancel").kendoButton({
             icon: "close",
-            click: function(){
+            click: function () {
                 $("#dialog").data('kendoWindow').close();
             }
         });
@@ -415,24 +415,6 @@
                             },
                             eo: {
                                 type: "string"
-                            },
-                            ATA: {
-                                type: "string"
-                            },
-                            hresholdValue: {
-                                type: "string"
-                            },
-                            cycleValue: {
-                                type: "string"
-                            },
-                            zhTitle: {
-                                type: "string"
-                            },
-                            enTitle: {
-                                type: "string"
-                            },
-                            operator: {
-                                type: "string"
                             }
                         }
                     }
@@ -441,12 +423,19 @@
             },
             scrollable: true,
             sortable: true,
-            selectable: true,
+            selectable: false,
             pageable: {
                 input: true,
                 numeric: false
             },
             columns: [{
+                    field: "",
+                    title: "",
+                    width: "30px",
+                    sortable: false,
+                    selectable: true
+                },
+                {
                     field: "models",
                     title: "文件类型"
                 },
@@ -459,78 +448,21 @@
                     title: "时限描述"
                 },
                 {
-                    field: "eo",
+                    field: "operator",
                     title: "实用性描述"
                 }
             ],
-            editable: "popup"
-        });
-        $("#add-test-grid").kendoGrid({
-            dataSource: {
-                data: products,
-                schema: {
-                    model: {
-                        fields: {
-                            models: {
-                                type: "string"
-                            },
-                            planNum: {
-                                type: "string"
-                            },
-                            SIN_Number: {
-                                type: "string"
-                            },
-                            eo: {
-                                type: "string"
-                            },
-                            ATA: {
-                                type: "string"
-                            },
-                            hresholdValue: {
-                                type: "string"
-                            },
-                            cycleValue: {
-                                type: "string"
-                            },
-                            zhTitle: {
-                                type: "string"
-                            },
-                            enTitle: {
-                                type: "string"
-                            },
-                            operator: {
-                                type: "string"
-                            }
-                        }
-                    }
-                },
-                pageSize: 20
-            },
-            scrollable: true,
-            sortable: true,
-            selectable: true,
-            pageable: {
-                input: true,
-                numeric: false
-            },
-            columns: [{
-                    field: "models",
-                    title: "文件类型"
-                },
-                {
-                    field: "planNum",
-                    title: "文件号"
-                },
-                {
-                    field: "SIN_Number",
-                    title: "时限描述"
-                },
-                {
-                    field: "eo",
-                    title: "实用性描述"
+            editable: "popup",
+            change: function (e) {
+                var selectedRows = this.select();
+                var selectedDataItems = [];
+                for (var i = 0; i < selectedRows.length; i++) {
+                    var dataItem = this.dataItem(selectedRows[i]);
+                    selectedDataItems.push(dataItem);
                 }
-            ],
-            editable: "popup"
+                // console.log(this.select())
+                // selectedDataItems contains all selected data items
+            }
         });
         $("#add-test-grid2").kendoGrid({
             dataSource: {
