--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         router.route("(/:category)/:page", function (category, page) {
             var mainBox = $("#center-pane");
             mainBox.html('');
-            kendo.ui.progress(mainBox, true)
+            kendo.ui.progress(mainBox, true) // 显示loading
             var newUrl = category ? category + '/' + page + '.html' : page + '.html';
             // 点击左侧树异步加载相应模块到右边显示
             $.ajax({
@@ -139,7 +139,7 @@
                 dataType: "html",
                 success: function (data) {
                     document.title = page;
-                    kendo.ui.progress(mainBox, false)
+                    kendo.ui.progress(mainBox, false) //隐藏loading
                     mainBox.html(data);
                 },
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
