--- a/define/define.html
+++ b/define/define.html
@@ -7,6 +7,7 @@
         <div>
             <div class="conditionsBox">
                 <div class="conItem">
+                    <img src="" alt="">
                     <label for="size" class="conName">机型</label>
                     </h4>
                     <select id="size" multiple="multiple" placeholder="Select size..." style="height:25px;width:150px;overflow:hidden; float:right;">
