--- a/details/edit-test.html
+++ b/details/edit-test.html
@@ -14,7 +14,7 @@
             <button class="btn-save" type="button">保存</button>
             <button class="k-warning btn-cancel" type="button">取消</button>
         </div>
-        <div class="tiItemBox" style="min-width:1024px">
+        <div class="tiItemBox" style="min-width:500px;overflow:auto;">
             <table width="100%" class="noEditHead">
                 <thead>
                     <tr>
@@ -47,6 +47,57 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="dia-list">
+                <div class="line-list">
+                    <span class="title">标题：</span> 检查飞机内部标牌。</div>
+                <div class="line-list">
+                    <span class="title">重大故障定义：</span> 检查飞机内部标牌。</div>
+                <div class="line-list">
+                    <span class="title">轻微故障定义：</span> 检查飞机内部标牌。</div>
+            </div>
+            <div class="conditionsBox">
+                <div class="conItem">
+                    <label for="size3" class="conName">机型</label>
+                    </h4>
+                    <select id="size3" placeholder="Select size...">
+                        <option>机型一</option>
+                        <option>机型二</option>
+                        <option>机型三</option>
+                    </select>
+                </div>
+                <div class="conItem">
+                    <span class="conName">维修方案项号</span>
+                    <input class="k-textbox" />
+                </div>
+                <div class="conItem">
+                    <span class="conName">工卡号</span>
+                    <input class="k-textbox" />
+                </div>
+                <div class="conItem">
+                    <span class="conName">循环EO</span>
+                    <input class="k-textbox" />
+                </div>
+                <div class="conItem">
+                    <span class="conName">ATA</span>
+                    <input class="k-textbox" />
+                </div>
+                <div class="conItem">
+                    <span class="conName">标题</span>
+                    <input class="k-textbox" />
+                </div>
+                <div class="conItem">
+                    <label for="size4" class="conName">营运人</label>
+                    </h4>
+                    <select id="size4" placeholder="Select size...">
+                        <option>张三</option>
+                        <option>李四</option>
+                        <option>王五</option>
+                    </select>
+                </div>
+                <button class="k-primary btn-search" type="button">查询</button>
+                <button class="btn-export" type="button">导出</button>
+                <button class="btn-add" type="button">新增</button>
+            </div>
             <div id="tabstrip">
                 <ul>
                     <li class="k-state-active">定期维修报告</li>
@@ -56,49 +107,7 @@
                     <li>维修方案项目定义信息</li>
                 </ul>
                 <div>
-                    <div class="conditionsBox">
-                        <div class="conItem">
-                            <label for="size3" class="conName">机型</label>
-                            </h4>
-                            <select id="size3" placeholder="Select size...">
-                                <option>机型一</option>
-                                <option>机型二</option>
-                                <option>机型三</option>
-                            </select>
-                        </div>
-                        <div class="conItem">
-                            <span class="conName">维修方案项号</span>
-                            <input class="k-textbox" />
-                        </div>
-                        <div class="conItem">
-                            <span class="conName">工卡号</span>
-                            <input class="k-textbox" />
-                        </div>
-                        <div class="conItem">
-                            <span class="conName">循环EO</span>
-                            <input class="k-textbox" />
-                        </div>
-                        <div class="conItem">
-                            <span class="conName">ATA</span>
-                            <input class="k-textbox" />
-                        </div>
-                        <div class="conItem">
-                            <span class="conName">标题</span>
-                            <input class="k-textbox" />
-                        </div>
-                        <div class="conItem">
-                            <label for="size4" class="conName">营运人</label>
-                            </h4>
-                            <select id="size4" placeholder="Select size...">
-                                <option>张三</option>
-                                <option>李四</option>
-                                <option>王五</option>
-                            </select>
-                        </div>
-                        <button class="k-primary btn-search" type="button">查询</button>
-                        <button class="btn-export" type="button">导出</button>
-                        <button class="btn-add" type="button">新增</button>
-                    </div>
+
                     <div id="grid3" style="height: 300px; width: 100%;"></div>
                 </div>
                 <div>
@@ -127,6 +136,18 @@
         $(".btn-save").kendoButton({
             icon: "save"
         });
+        // 
+        $(".btn-search").kendoButton({
+            icon: "search"
+        });
+        // 
+        $(".btn-export").kendoButton({
+            icon: "download"
+        });
+        // 
+        $(".btn-add").kendoButton({
+            icon: "plus-circle"
+        });
         // 取消按钮
         $(".btn-cancel").kendoButton({
             icon: "close",
@@ -134,6 +155,8 @@
                 $("#dialog").data('kendoWindow').close();
             }
         });
+        $("#size3").kendoComboBox();
+        $("#size4").kendoComboBox();
         $("#tabstrip").kendoTabStrip({
             animation: false
         });
