--- a/details/add-test.html
+++ b/details/add-test.html
@@ -399,6 +399,7 @@
             editable: "popup"
         });
         $("#add-test-grid").kendoGrid({
+            noRecords: true,
             dataSource: {
                 data: products,
                 schema: {
