--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         expanded: true,  // item is rendered expanded
                         items: [{
                                 text: "维修方案项目定义",
-                                imageUrl: "/images/doc-ico.png",
+                                imageUrl: "./images/doc-ico.png",
                                 url: "#/define/define" // link URL if navigation is needed (optional)
                             },
                             {
