--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                             },
                             {
                                 text: "维修方案项目定义查询",
-                                imageUrl: "/images/fold-ico.png",
+                                imageUrl: "./images/fold-ico.png",
                                 items: [{ // Sub item collection.
                                     text: "aaa",
-                                    imageUrl: "/images/doc-ico.png"
+                                    imageUrl: "./images/doc-ico.png"
                                 }, {
                                     text: "bbb",
-                                    imageUrl: "/images/doc-ico.png"
+                                    imageUrl: "./images/doc-ico.png"
                                 }]
                             }
                         ]
@@ -136,42 +136,42 @@
                         text: "维修数据采集管理",
                         items: [{
                                 text: "维修数据相关性校核",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             },
                             {
                                 text: "维修数据查询",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             }
                         ]
                     }, {
                         text: "维修方案统计分析及管理",
                         items: [{
                                 text: "维修数据统计分析",
-                                imageUrl: "/images/doc-ico.png",
+                                imageUrl: "./images/doc-ico.png",
                                 url: "#/statistics/statistics"
                             },
                             {
                                 text: "维修数据统计分析查询",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             },
                             {
                                 text: "有效性监控设置",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             }
                         ]
                     }, {
                         text: "维修方案优化工程建议",
                         items: [{
                                 text: "维修方案优化工程建议",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             },
                             {
                                 text: "维修方案优化工程建议查询",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             },
                             {
                                 text: "关联工卡维护",
-                                imageUrl: "/images/doc-ico.png"
+                                imageUrl: "./images/doc-ico.png"
                             }
                         ]
                     }
